# rsnbs

./: .gitignore  Cargo.toml  README.md
src/: codec.rs  error.rs  fields.rs  lib.rs  main.rs  nbs_ext.rs  note.rs  parser.rs  schematic.rs  tests.rs  util.rs
src/layout/: compact.rs  linear.rs
src/schematic/: compact.rs  linear.rs  mod.rs
