[package]
name = "rsnbs"
version = "0.1.2"
authors = ["kemiamu <kemya@tuta.io>", "Joppe Stuyck <joppe@stuyck.be>"]
edition = "2024"
description = "IO functionality for the OpenNBS .nbs format"
license = "AGPL-3.0-or-later"
repository = "https://github.com/omninbs/rsnbs"
readme = "README.md"
keywords = ["nbs", "music", "minecraft", "file-format"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
