[package]
name = "rsnbs"
version = "0.1.2"
authors = ["kemiamu <kemya@tuta.io>", "Joppe Stuyck <joppe@stuyck.be>"]
edition = "2024"
description = "IO functionality for the OpenNBS .nbs format"
license = "AGPL-3.0-or-later"
repository = "https://github.com/omninbs/rsnbs"
readme = "README.md"
keywords = ["nbs", "music", "minecraft", "file-format"]
categories = ["games"]

[dependencies]
encoding_rs = "0.8.35"
mcdata = "0.4.0"
rustmatica = "0.5.2"
thiserror = "2.0.18"
